# gbwm

./: .gitignore  CMakeLists.txt  README  TODO  gbwmrc  setup-env.sh  suppression.supp
src/: CMakeLists.txt  button.cpp  button.h  client.cpp  client.h  config.h.in  config_file.cpp  config_file.h  draw_context.h  event.cpp  event.h  gbwm.cpp  log.cpp  log.h  screen.cpp  screen.h  theme.cpp  theme.h  titlebar.cpp  titlebar.h  window.cpp  window.h
